--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ services:
 
 # 스크립트를 실행할 수 있는 환경 구성
 before_install:
-  - echo "start C7reating an image with dockerfile"
-  - docker build -t desfox/docker-react-app -f Dockerfile.dev .
+  - echo "start Creating an image with dockerfile"
+  - docker build -t desfox/docker-react-app -f Dockerfile .
 
 # 실행할 스크립트(테스트 실행)
 script:
